--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Appsettings": {
+    "Token": "Super secret key authentication",
+    "Factory": "SHC",
+    "Area": "T"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection_T": "Server=10.4.6.169;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=shc@1234;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
