--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,14 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <Content Include="Resources\**" CopyToOutputDirectory="PreserveNewest"/>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5"  >
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+    <!-- <PackageReference Include="Aspose.Cells" Version="20.1.0"/> -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
+    <PackageReference Include="LinqKit.Core" Version="1.2.4"/>
+    <PackageReference Include="AgileObjects.AgileMapper" Version="1.8.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.5"/>
   </ItemGroup>
-
 </Project>
