--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,7 +5,8 @@
     "Area": "T"
   },
   "ConnectionStrings": {
-    "DefaultConnection_T": "Server=10.4.6.169;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=shc@1234;TrustServerCertificate=true"
+    "DefaultConnection_T": "Server=10.4.6.169;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=shc@1234;TrustServerCertificate=true",
+    "DefaultConnection_O": "Server=.;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=Boocn879#;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
