--- a/SPA/angular.json
+++ b/SPA/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/spa",
+            "outputPath": "D:\\Deploy\\TOP11\\SPA",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
