--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,18 @@
             }
         },
         {
+            "name": ".NET Core Watch",
+            "type": "dotnetwatchattach",
+            "request": "launch",
+            "args": {
+                "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+                }
+            },
+            "task": "watch",
+            "program": "API.exe"
+        },
+        {
             "name": "API Launch",
             "type": "coreclr",
             "request": "launch",
