--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,11 +33,15 @@
                 "watch",
                 "run",
                 "--no-hot-reload",
+                "--non-interactive",
                 "--project",
-                "${workspaceFolder}/API/API.csproj"
+                "${workspaceFolder}/API/API.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
         },
+
         {
             "type": "npm",
             "script": "start",
