--- a/SPA/tsconfig.app.json
+++ b/SPA/tsconfig.app.json
@@ -8,11 +8,10 @@
     ]
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-
+    "src/main.ts"
   ],
   "include": [
+    "src/**/*.ts",
     "src/**/*.d.ts"
   ]
 }
