--- a/eTierMeeting_v2/API/appsettings.json
+++ b/eTierMeeting_v2/API/appsettings.json
@@ -1,11 +1,11 @@
 {
   "Appsettings": {
     "Token": "Super secret key authendication123",
-    "Factory": "CB",
-    "FactoryId": "E",
+    "Factory": "SHC",
+    "FactoryId": "C",
     "FactoryId_Comment": "SHC => C, CB => E, TSH => U, SPC => D, SHY => L, SHT => J",
     "DataSeach": "",
-    "Area": "O"
+    "Area": "T"
   },
   "ConnectionStrings": {
     "SHC_O_Comment": "/* --------------------------- SHC Official Connection -------------------------- */",
