--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,11 +2,11 @@
   "Appsettings": {
     "Token": "Super secret key authentication",
     "Factory": "SHC",
-    "Area": "T"
+    "Area": "O"
   },
   "ConnectionStrings": {
     "DefaultConnection_T": "Server=10.4.6.169;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=shc@1234;TrustServerCertificate=true",
-    "DefaultConnection_O": "Server=.;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=Boocn879#;TrustServerCertificate=True"
+    "DefaultConnection_O": "Server=.\\SQLEXPRESS;Database=Top11;MultipleActiveResultSets=true;User Id=sa;Password=1234;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
